--- a/example.yaml
+++ b/example.yaml
@@ -1,11 +1,6 @@
 ---
 - hosts: all
-  gather_facts: true
-  become: true
+  remote_user: root
   tasks:
-    - yum:
-        name: bind-utils
-      when: ansible_os_family == "RedHat"
-    - apt:
-        name: dnsutils
-      when: ansible_os_family == "Debian"
+    - name: hacer un ping
+      ping:
